--- a/libs/shared/ui/day-offer/src/lib/shared-ui-day-offer.component.html
+++ b/libs/shared/ui/day-offer/src/lib/shared-ui-day-offer.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-subtitle>Econime em tudo</mat-card-subtitle>
+    <mat-card-subtitle>Economize em tudo</mat-card-subtitle>
     <mat-card-title>Destaque da semana</mat-card-title>
   </mat-card-header>
   <img
