--- a/libs/shared/ui/market-grid/src/lib/shared-ui-market-grid.component.html
+++ b/libs/shared/ui/market-grid/src/lib/shared-ui-market-grid.component.html
@@ -1,49 +1,60 @@
 <div class="market-grid">
-  <mat-card class="market-grid__item">
+  <mat-card class="market-grid__item" (click)="navigateTo()">
+    <img class="market-grid__item__img" src="assets/imgs/cobasi.png" alt="" />
+  </mat-card>
+  <mat-card class="market-grid__item" (click)="navigateTo()">
     <img
       class="market-grid__item__img"
-      mat-card-image
-      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      src="assets/imgs/kalunga-logo.png"
       alt=""
     />
   </mat-card>
-  <mat-card class="market-grid__item">
+  <mat-card class="market-grid__item" (click)="navigateTo()">
     <img
       class="market-grid__item__img"
-      mat-card-image
-      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      src="assets/imgs/fast-shop-logo.png"
       alt=""
     />
   </mat-card>
-  <mat-card class="market-grid__item">
+  <mat-card class="market-grid__item" (click)="navigateTo()">
     <img
       class="market-grid__item__img"
-      mat-card-image
-      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      src="assets/imgs/renner-logo.png"
       alt=""
     />
   </mat-card>
-  <mat-card class="market-grid__item">
+  <mat-card class="market-grid__item" (click)="navigateTo()">
     <img
       class="market-grid__item__img"
-      mat-card-image
-      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      src="assets/imgs/boticario.png"
       alt=""
     />
   </mat-card>
-  <mat-card class="market-grid__item">
+  <mat-card class="market-grid__item" (click)="navigateTo()">
     <img
       class="market-grid__item__img"
-      mat-card-image
-      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      src="assets/imgs/CA-logo.png"
       alt=""
     />
   </mat-card>
-  <mat-card class="market-grid__item">
+  <mat-card class="market-grid__item" (click)="navigateTo()">
     <img
       class="market-grid__item__img"
-      mat-card-image
-      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      src="assets/imgs/logo-kanui.png"
+      alt=""
+    />
+  </mat-card>
+  <mat-card class="market-grid__item" (click)="navigateTo()">
+    <img
+      class="market-grid__item__img"
+      src="assets/imgs/mcdonalds.png"
+      alt=""
+    />
+  </mat-card>
+  <mat-card class="market-grid__item" (click)="navigateTo()">
+    <img
+      class="market-grid__item__img"
+      src="assets/imgs/pao-de-acucar.png"
       alt=""
     />
   </mat-card>
