--- a/libs/shared/ui/search/src/lib/shared-ui-search.component.html
+++ b/libs/shared/ui/search/src/lib/shared-ui-search.component.html
@@ -1,6 +1,6 @@
 <div class="search">
   <form>
-    <mat-form-field class="search__input">
+    <mat-form-field class="search__input" [floatLabel]="'never'">
       <mat-icon matSuffix>search</mat-icon>
       <input
         matInput
