--- a/libs/shared/profile/ui/src/lib/shared-profile-ui.component.scss
+++ b/libs/shared/profile/ui/src/lib/shared-profile-ui.component.scss
@@ -1,27 +1,33 @@
-.profile__container{
+.profile {
+  height: 100%;
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
-  box-sizing: border-box;
-  margin: 16px;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-
-  &--logged{
-    width: 100%
-  }
-
-  &__avatar, &__name{
+  .profile__container {
     display: flex;
-    flex-direction: row;
-    width: 100%;
     justify-content: center;
+    box-sizing: border-box;
+    margin: 16px;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
 
-   
-  }
+    &--logged {
+      width: 100%;
+    }
 
-  &__avatar{
-    & img{
-      width: 50%;
-      border-radius: 50%;
+    &__avatar,
+    &__name {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: center;
+    }
+
+    &__avatar {
+      & img {
+        width: 50%;
+        border-radius: 50%;
+      }
     }
   }
 }
